# qwen_finetune

./: .gitignore  ANNOTATION_REVIEW_GUIDE.md  README.md  evaluate_models.ipynb  pyproject.toml  run_fix_annotations.sh  run_step1.sh
scripts/: 01_process_enron_csv.py  02_generate_annotations.py  03_split_dataset.py  README.md  check_data_quality.py  clean_and_standardize_data.py  evaluate_models.py  fix_annotations_with_llm.py  inference.ipynb  inference.py  standardize_time_fields_v2.py  train_lora.py
