[project]
name = "lora-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "openai>=2.14.0",
    "peft>=0.18.0",
    "protobuf>=6.33.2",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "trackio>=0.1.0",
    "tqdm>=4.67.0",
    "transformers>=4.57.3",
    "httpx[socks]>=0.28.1",
]
